--- a/CreatePost.css
+++ b/CreatePost.css
@@ -22,55 +22,192 @@ body{
   hsl(33deg 100% 94%) 100%);
   background-attachment: fixed;
 
-    
-}
-.headercontainer{
-    padding: 0;
-    margin:0;
-    height: 100vh;
-    width: 100vw;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
-    overflow: hidden;
 }
-.link{
-    padding-left: 10px;
-    padding-top: 3px;
-    float: right;
-}
-.webheader{
-    padding-left: 10px;
+.webheader
+{
     display: flex;
     flex-direction: row;
-    align-items: center;
-    position: fixed;
+    justify-content: center;
+    position: sticky;
     width: 100%;
-    height: 5%;
-    border-bottom: 2px solid;
-    background: rgb(48,29,61);
-    background: linear-gradient(90deg, rgba(48,29,61,1) 0%, rgba(65,37,84,1) 35%, rgba(66,33,88,1) 63%, rgba(79,37,108,1) 100%);
-    
-    
+    background-color: #301d3d;
 }
-.logo{
-   
+
+.headercontent
+{
+    align-items: center;
+    font-size: 20px;
+    color:white;
+    font-weight: 600;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+}
+
+.headerhome
+{
+    display: flex;
+    align-items: center;
+    height: 100%;
+    width: 30%;
+}
+
+.websitelogo
+{ 
+    padding-left: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 30%;
+}
+
+.websitelogo img
+{
     height: 30px;
-    width: 55px;
-    float:left;
-    max-width: 100%;
-    max-height:100%;
+    width: 50px;
+    object-fit: contain;
+    padding-right: 10px;
 }
-.headercontent{
+
+.link
+{
+    font-size: 26px;
+}
+
+.headersearchbar
+{
+    display: flex;
+    align-items: center;
+    height: 45px;
+    width: 60%;
+}
+
+.searchbar
+{
+    background-color: rgba(124, 118, 152,0.5);
+    width: 100%;
+    height: 80%;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    border: 0;
+}
+
+.searchbar input 
+{
+    background: transparent;
+    flex: 1;
+    border: 0;
+    outline: none;
+    padding: 10px;
+    color: white;
+    font-size: 16px;
+    padding-left: 5px;
+}
+
+.searchbar:hover 
+{
+    background: rgba(255, 255, 255, 0.3);
+}
+
+.headerprofile
+{
+    padding-top: 0px;
+    margin: 0;
+    height: 100%;
+    width: 30%;
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
+    padding-right: 4vw;
+}
+
+.profile
+{
     display: flex;
     flex-direction: row;
     justify-content: left;
+    align-items: center;
     height: 100%;
     width: 70%;
+}
+
+.profileicon
+{
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    padding-right: 4px;
+}
+
+.profileiconholder
+{
+    border-width: 1px;
+    border-color: #ebd3cb;
+    border-style: solid;
+    width: 32px;
+    height: 32px;
+    border-radius: 100%;
+}
+
+.profileiconholder img 
+{
+    border-radius: 100%;
+    width: 100%;
+}
+
+.profilehandlecontainer
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: right;
+    width: 70%;
+    height: 100%;
+}
+
+.profiledisplayname
+{
+    color:#ebd3cb;
+    font-size: 12px;
+}
+
+.profilehandlename
+{
+    color:#ebd3cb;
+    font-size: 8px;
+}
+
+.topbuttons {
+    display: flex;
+    float: right;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-left: 15px;
+    margin-right: 15px;
+    font-size: 16px;
+    flex-direction: row;
+    background: transparent;
+    border-radius: 10px;
+}
+
+.topbuttons a{
+    text-decoration: none;
     text-align: center;
-    font-size: 20px;
-    font-weight: 600;
-    
+    color: beige;
+    padding: 5px;
+}
+
+.topbuttons a:hover {
+    background-color: #7903a1c8;
+    border-radius: 10px;
 }
 
 .signcontainer{
