--- a/Sign_in.css
+++ b/Sign_in.css
@@ -6,6 +6,8 @@
     
 }
 body{
+    overflow-x: hidden;
+    overflow-y: hidden;
     margin: 0;
     background-image: linear-gradient(
   45deg,
@@ -26,37 +28,71 @@ body{
     background-attachment: fixed;
 
 }
-.link{
-    padding-top: 13px;
-    float: right;
+
+.homecontainer
+{
+    overflow-x: hidden;
+    padding: 0;
+    margin:0;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-.webheader{
+
+.webheader
+{
     display: flex;
     flex-direction: row;
-    align-items: center;
-    justify-content: left;
-    position: fixed;
+    justify-content: center;
+    position: sticky;
     width: 100%;
-    height: 5%;
-    border-bottom: 2px solid;
-    background: rgb(48,29,61);
-    background: linear-gradient(90deg, rgba(48,29,61,1) 0%, rgba(65,37,84,1) 35%, rgba(66,33,88,1) 63%, rgba(79,37,108,1) 100%);
-    
+    background-color: #301d3d;
 }
-.logo{
-   
-    height: 30px;
-    width: 55px;
-    float:left;
-    max-width: 100%;
-    max-height:100%;
-}
-.headercontent{
-    text-align: center;
+
+.headercontent
+{
+    align-items: center;
     font-size: 20px;
+    color:white;
     font-weight: 600;
-    
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
 }
+
+.headerhome
+{
+    display: flex;
+    align-items: center;
+    height: 100%;
+}
+
+.websitelogo
+{ 
+    padding-left: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 30%;
+}
+
+.websitelogo img
+{
+    height: 30px;
+    width: 50px;
+    object-fit: contain;
+    padding-right: 10px;
+}
+
+.link
+{
+    font-size: 26px;
+}
+
 
 .signcontainer{
     
@@ -93,7 +129,7 @@ body{
 .blocktitle{
     font-weight: 1000;
 }
-input[type="text"], [type = "password"] {
+input[type="email"], [type = "password"] {
     width: 100%;
     padding: 10px;
     margin-bottom: 10px;
