--- a/profilepage.css
+++ b/profilepage.css
@@ -30,6 +30,7 @@ body
 
 .homecontainer
 {
+    overflow-x: hidden;
     padding: 0;
     margin:0;
     height: 100vh;
@@ -37,33 +38,30 @@ body
     display: flex;
     flex-direction: column;
     align-items: center;
-    overflow: hidden;
 }
 
-.webheader{
+.webheader
+{
     display: flex;
     flex-direction: row;
-    align-items: center;
-    justify-content: left;
+    justify-content: center;
     position: sticky;
     width: 100%;
-    height: 5%;
-    border-bottom: 2px solid;
-    background: rgb(48,29,61);
-    background: linear-gradient(90deg, rgba(48,29,61,1) 0%, rgba(65,37,84,1) 35%, rgba(66,33,88,1) 63%, rgba(79,37,108,1) 100%);
+    background-color: #301d3d;
 }
-.headercontent{
+
+.headercontent
+{
+    align-items: center;
     font-size: 20px;
     color:white;
-    padding: 8px;
-    padding-left: 35px;
     font-weight: 600;
-    align-items: center;
-    justify-content: center;
     display: flex;
     flex-direction: row;
+    justify-content: center;
     width: 100%;
 }
+
 .headerhome
 {
     display: flex;
@@ -72,7 +70,8 @@ body
     width: 30%;
 }
 
-.logo{
+.websitelogo
+{ 
     padding-left: 20px;
     display: flex;
     justify-content: center;
@@ -80,7 +79,9 @@ body
     height: 100%;
     width: 30%;
 }
-.logo img {
+
+.websitelogo img
+{
     height: 30px;
     width: 50px;
     object-fit: contain;
@@ -90,11 +91,6 @@ body
 .link
 {
     font-size: 26px;
-}
-
-.linkz{
-    padding-top: 13px;
-    float: right;
 }
 
 .headersearchbar
@@ -114,10 +110,9 @@ body
     display: flex;
     align-items: center;
     border: 0;
-    padding-left: 10px;
 }
 
-.searchbar input     
+.searchbar input 
 {
     background: transparent;
     flex: 1;
@@ -128,6 +123,7 @@ body
     font-size: 16px;
     padding-left: 5px;
 }
+
 .searchbar:hover 
 {
     background: rgba(255, 255, 255, 0.3);
@@ -145,62 +141,92 @@ body
     padding-right: 4vw;
 }
 
-
-
-
-.logo{
-   
-    height: 30px;
-    width: 55px;
-    float:left;
-    max-width: 100%;
-    max-height:100%;
+.profile
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: center;
+    height: 100%;
+    width: 70%;
 }
 
-.searchbar
+.profileicon
 {
-    background-color: rgba(124, 118, 152,0.5);
-    border-radius: 20px;
-    border: 0;
-    height: 70%;
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    padding-right: 4px;
 }
 
-.searchbar input     
+.profileiconholder
 {
-    background: transparent;
-    flex: 1;
-    border: 0;
-    outline: none;
-    padding: 10px;
-    color: white;
+    border-width: 1px;
+    border-color: #ebd3cb;
+    border-style: solid;
+    width: 32px;
+    height: 32px;
+    border-radius: 100%;
+}
+
+.profileiconholder img 
+{
+    border-radius: 100%;
+    width: 100%;
+}
+
+.profilehandlecontainer
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: right;
+    width: 70%;
+    height: 100%;
+}
+
+.profiledisplayname
+{
+    color:#ebd3cb;
+    font-size: 12px;
+}
+
+.profilehandlename
+{
+    color:#ebd3cb;
+    font-size: 8px;
+}
+
+.topbuttons {
+    display: flex;
+    float: right;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-left: 15px;
+    margin-right: 15px;
     font-size: 16px;
-    padding-left: 5px;
-}
-
-.searchbar:hover 
-{
-    background: rgba(255, 255, 255, 0.3);
+    flex-direction: row;
+    background: transparent;
+    border-radius: 10px;
 }
 
 .topbuttons a{
     text-decoration: none;
     text-align: center;
     color: beige;
-    padding: 10px 5px 5px 5px;
+    padding: 5px;
 }
 
 .topbuttons a:hover {
-    background-color: rgb(142, 9, 204);
-    color: black;
-}
-.topbuttons a:active {
-    background-color:rgb(166, 9, 223)
+    background-color: #7903a1c8;
+    border-radius: 10px;
 }
 
-.mainpage {
-    margin: 10px;
+.mainpage
+{
+    margin-top: 10px;
 }
-
 .profile
 {
     display: flex;
@@ -291,7 +317,7 @@ body
     background-color:rgb(166, 9, 223)
 }
 
-.profilecontainer {
+.profilecontainer1 {
     display: flex;
     width: 650px;
     height: auto;
