--- a/viewpost.css
+++ b/viewpost.css
@@ -29,6 +29,7 @@ body
 
 .homecontainer
 {
+    overflow-x: hidden;
     padding: 0;
     margin:0;
     height: 100vh;
@@ -36,34 +37,30 @@ body
     display: flex;
     flex-direction: column;
     align-items: center;
-    overflow: hidden;
 }
 
-.webheader{
+.webheader
+{
     display: flex;
     flex-direction: row;
-    align-items: center;
-    justify-content: left;
+    justify-content: center;
     position: sticky;
     width: 100%;
-    height: 5%;
-    border-bottom: 2px solid;
-    background: rgb(48,29,61);
-    background: linear-gradient(90deg, rgba(48,29,61,1) 0%, rgba(65,37,84,1) 35%, rgba(66,33,88,1) 63%, rgba(79,37,108,1) 100%);
+    background-color: #301d3d;
 }
 
-.headercontent{
+.headercontent
+{
+    align-items: center;
     font-size: 20px;
     color:white;
-    padding: 8px;
-    padding-left: 35px;
     font-weight: 600;
-    align-items: center;
-    justify-content: center;
     display: flex;
     flex-direction: row;
+    justify-content: center;
     width: 100%;
 }
+
 .headerhome
 {
     display: flex;
@@ -72,7 +69,8 @@ body
     width: 30%;
 }
 
-.logo{
+.websitelogo
+{ 
     padding-left: 20px;
     display: flex;
     justify-content: center;
@@ -80,7 +78,9 @@ body
     height: 100%;
     width: 30%;
 }
-.logo img {
+
+.websitelogo img
+{
     height: 30px;
     width: 50px;
     object-fit: contain;
@@ -90,11 +90,6 @@ body
 .link
 {
     font-size: 26px;
-}
-
-.linkz{
-    padding-top: 13px;
-    float: right;
 }
 
 .headersearchbar
@@ -114,10 +109,9 @@ body
     display: flex;
     align-items: center;
     border: 0;
-    padding-left: 10px;
 }
 
-.searchbar input     
+.searchbar input 
 {
     background: transparent;
     flex: 1;
@@ -128,6 +122,7 @@ body
     font-size: 16px;
     padding-left: 5px;
 }
+
 .searchbar:hover 
 {
     background: rgba(255, 255, 255, 0.3);
@@ -154,10 +149,7 @@ body
     height: 100%;
     width: 70%;
 }
-.profile a {
-    text-decoration: none;
-    color: #ebd3cb;
-}
+
 .profileicon
 {
     display: flex;
@@ -165,7 +157,6 @@ body
     justify-content: center;
     align-items: center;
     padding-right: 4px;
-    border: 1px
 }
 
 .profileiconholder
@@ -205,6 +196,7 @@ body
     color:#ebd3cb;
     font-size: 8px;
 }
+
 .topbuttons {
     display: flex;
     float: right;
@@ -223,16 +215,11 @@ body
     text-align: center;
     color: beige;
     padding: 5px;
-    /*background-color: #BD8FCB;*/
 }
 
 .topbuttons a:hover {
     background-color: #7903a1c8;
     border-radius: 10px;
-}
-
-.topbuttons a:active {
-    background-color:rgb(166, 9, 223)
 }
 .postcontainer {
   
